--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve NODE_ENV=test VUE_APP_ENV=test  --mode test",
+    "serve": "cross-env NODE_ENV=test vue-cli-service serve ",
     "build": "cross-env NODE_ENV=test node script.js",
     "build:test": "cross-env NODE_ENV=test  vue-cli-service build  --mode test",
     "build:pre": "cross-env NODE_ENV=pre vue-cli-service  build --mode pre",
